10月31日会社分

--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -207,3 +207,65 @@ gitでページが飛んでほしくないので、マルコピする。
 
 ・俺が仕様書メモとしてまとめてる内容は全て開発フォルダの仕様書フォルダに乗っけておけばいいのでは？
 メモ書き程度のやつは上に持っていくのはどうかな。
+
+
+寝坊するということは、生活が悪いということだ。
+勉強の次に改善すべきはこちらではなかろうか？
+睡眠時間より、勉強の期限を優先しているからこうなる。
+試験がいったん落ち着いても、遅くまで起きているのが常態化しているからこうなる。
+というか、残業して勉強してってなるとどうしても睡眠時間が犠牲になる。
+それを解消するためには、一切の無駄を省いて行動するしかない。
+いや、それ以外にも何かあるだろうけど、すぐには思いつかない。
+
+まぁ、でも遅刻したのが日曜でよかった。
+不幸中の幸いというやつだな。
+
+
+疲れているというか、頭の中があふれているといえばいいか。
+溜まった物事を消化するのに手一杯だ。
+優先度をつけていないからこうなっているのもある。
+手当たり次第にやっているから、あれもこれもって感覚に襲われて消耗する。
+それが今のモヤモヤした感覚の正体ではなかろうか。
+
+終わったものを考える必要はない。
+
+未経験から5つの資格を取得してってのは十分すごい。
+既にIT職にありながら5つの資格ってのは別にすごくない。当たり前というか、もっと短い時間でとれるのでは？って思われても不思議ではない。
+
+
+・定期便
+・選挙
+・映画
+・参考書
+・デスクマット
+
+休んでいる暇がないな。頭の中がやばいことになっている。
+俺にとっての休憩は徹底的にまとめるか、散歩して頭を空にするかのどちらかしかない気がする。
+
+完璧主義が裏にある気がする。
+
+他にやらないといけないことは何がある？
+とりあえず、今日から102を始めるか。
+参考書を読むところから行きますかね。
+まぁ、まだ満足にまとめることができていないのが引っかかるけどね。
+後は、なんか家の中が散らかっているというか、いらないものであふれている気がしてならない。
+少し整理が必要な気がするんだけど・・・。
+
+
+つまらなくしているのは自分。
+全ては自分。
+世界は自分というフィルターを通してでしか見ることができない。
+そのフィルターが汚れ切っているようでは、何をしたって無駄だ。
+
+
+
+火を消す。
+火を起こさないようにする。
+そういえば！というすべての可能性はつぶさないといけない。
+
+
+正直飲み会は行きたくないが、断ったらそれはそれで逆効果だろう。
+そんなこといちいち考えるから俺は駄目なんだ。
+流れに身を任せ、とりあえずこなせばいい。
+変に勘繰るくらいなら、とりあえず参加していたほうが波もたたないだろう。
+
