--- a/勉強したいことリスト.md
+++ b/勉強したいことリスト.md
@@ -70,7 +70,6 @@ ORマッパーとはなにか？
 
 ・スイッチは第何層で動く装置だったか。
 
-・80 70
 
 思えば、PHP,JavaScript,TypeScriptの文法がわからない。
 基本的なところを改めてまとめたい。  
@@ -97,6 +96,20 @@ sql where 仕組み
 [SELECT文の処理の仕組みを説明してみた。](https://nattou-curry-2.hatenadiary.org/entry/20090315/1237089749)
 
 [Dispose の意味が未だわからないのですが](https://atmarkit.itmedia.co.jp/bbs/phpBB/viewtopic.php?topic=34497&forum=7)  
+
+[C++クラスのメモリ展開アドレス](https://freelifetech.com/class-address-placement/)
+[対数の定義](http://www.geisya.or.jp/~mwm48961/kou2/def_log1.html)  
+[C#に潜むstructの罠](https://techblog.kayac.com/trap-around-struct-in-csharp)  
+[シンプルなUserControl ～多分これが一番簡単だと思います](https://qiita.com/soi/items/12ceea4efcf31c1a7b93)  
+[WPFのRelativeSourceのはなし](https://hidari-lab.hatenablog.com/entry/wpf_relativesource_self_and_findancestor)  
+[【WPF】RelativeSource(バインディング)の使い方メモ](https://qiita.com/tera1707/items/73cda312b7cd9c4df40d)  
+[InteractionMessageActionの自作](https://days-of-programming.blogspot.com/2018/08/interactionmessageaction.html)  
+
+・比例代表、小選挙区、裁判官のアレ
+純粋に仕組みを知りたい。
+
+・IQueryrableについて。
+Whereだけの遅延実行とToList()することによる即時実行のサンプルを作りたい。
 
 ---
 
@@ -194,4 +207,7 @@ int[][] aa = new int[100][512];
 〆・skip,takeをまとめたい。skipの存在を知らなかったからreverse.take.reverseなんてくそ面倒くさいことして実現したのもまとめたい。
 
 〆・linqで文字列をjoinするサンプルがわかりずらいので修正したい。
+
+〆・80 70
+→まとめなくても、比率と比率の掛け算は納得が言ったのでおｋとする。
 
