--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -1,21 +1,34 @@
 # 後でまとめたいやつら
 
+## マニフェストファイルとは？
+
 アプリケーション マニフェスト [application manifest]
 アプリケーションおよびそのすべての構成ファイルを記述するファイル。ClickOnce アプリケーションによって使用されます。
+
+俺が調べたい内容はこんな事だっただろうか。  
+発行の時に追加されるあれについてだった気がする。  
+それ以外の意味では、見た目に関する事だとか、管理者権限を付与するものだとか、他のアセンブリとの接続情報を保持するものだとか、  
+そういったメタデータの集まり的なファイルの模様。  
+まぁ、でも意味合い的にはそれだけで十分な気がするけどね。
+
+[C#メモ Manifestファイルを追加してフォームの表示がぼやっとしているのをはっきりさせてみる](https://www.tetsuyanbo.net/tetsuyanblog/45990)  
+どういう仕組みなのかは知らないが、マニフェストファイルを追加するだけで文字のぼやけが解消するらしい。
+ここら辺は必要になったらまた調べることに鳴るだろう。
 
 ---
 
 ## GroupByした要素の内、先頭のものだけ取得したい
 
-[selectMany](https://www.urablog.xyz/entry/2018/05/28/070000#SelectMany%E3%82%92%E4%BD%BF%E3%81%86)
-[groupby](https://www.urablog.xyz/entry/2018/07/07/070000)
-[groupbyして先頭](https://entityframework.net/knowledge-base/3850429/get-the-first-record-of-a-group-in-linq-)
-<https://stackoverflow.com/questions/19012986/how-to-get-first-record-in-each-group-using-linq/39932057>
+[selectMany](https://www.urablog.xyz/entry/2018/05/28/070000#SelectMany%E3%82%92%E4%BD%BF%E3%81%86)  
+[groupby](https://www.urablog.xyz/entry/2018/07/07/070000)  
+[groupbyして先頭1](https://entityframework.net/knowledge-base/3850429/get-the-first-record-of-a-group-in-linq-)  
+[groupbyして先頭2]<https://stackoverflow.com/questions/19012986/how-to-get-first-record-in-each-group-using-linq/39932057>  
+
+やりたいこと割り勘の伝票IDを取得して、重複を排除して、それが2件以上あれば、別々で割り勘を実行した人がいるという事なので、呼び出せないようにしたい。  
+ついでに、誰と誰が別々に割り勘しているのかをアナウンスしたいので、求めた伝票IDを持っている人の中でそれぞれ先頭の人だけを抜き出したい。  
+意外と難しかった。SelectManyとGroupByを組み合わせてうまい事出来たので、まとめる。  
 
 ``` C#
-// やりたいこと割り勘の伝票IDを取得して、重複を排除して、それが2件以上あれば、別々で割り勘を実行した人がいるという事なので、呼び出せないようにしたい。
-// ついでに、誰と誰が別々に割り勘しているのかをアナウンスしたいので、求めた伝票IDを持っている人の中でそれぞれ先頭の人だけを抜き出したい。
-// 意外と難しかった。SelectManyとGroupByを組み合わせてうまい事出来たので、まとめる。
 var count = SettlementDetailList
    // 割り勘の伝票IDを取得
    .Select(s => s.SlipList.FirstOrDefault(w => w.SlipType == SlipType.DutchTreat)?.SlipID)
@@ -122,84 +135,48 @@ Disclosure:開示、発表
 
 ---
 
-## レイテンシ
+## IPSec(Security Architecture for Internet Protocol)
 
-latency : 潜伏、潜在
+基本情報でIPSec,ESPで暗号化するものはどれかって問題が出た。  
+IPSecがどんなものか、結局わかってなかったのでまとめる。  
+現時点で知っていることは、ネットワーク層のプロトコルである事とIPv6ではデフォルトで実装されている事くらいか。  
+多分答えはIPパケットとかだったのだろう。  
 
-潜伏時間、潜時、待ち時間、反応時間とは、デバイスに対してデータ転送などを要求してから、その結果が返送されるまでの不顕性の高い遅延時間のこと。
-データ転送における指標のひとつで、転送要求を出してから実際にデータが送られてくるまでに生じる、通信の遅延時間のことをいいます。
-この遅延時間が短いことをレイテンシが小さい（低い）、遅延時間が長いことをレイテンシが大きい（高い）と表現しています。
+IPSecは調べればごまんと出てくるので、都度調べてくれ。  
+今回はWikiの内容をメインに話を進める。  
 
-パッと思いつく事として、伝送遅延があるけど、それだけがレイテンシではない模様。
-あくまで、要求を出してから送られてくるまでの時間なので、複数の要因が存在する。
+・ネットワーク層でセキュリティーを実現するためのプロトコル  
+・IPパケット単位で改ざん検知や秘匿機能を提供する  
+・暗号化をサポートしていないトランスポート層やアプリケーションを用いても改ざんや暗号化が実現されるのがメリット  
+→通信全体としてセキュリティーを担保することが出来る。  
+・設定が複雑なので、VPN接続で用いられる。(設定の組み合わせが膨大かつ2点間の設定が全て一致していなければ通信が成立しないため高度な知識が要求される)  
+・因みにTLSはアプリケーション層のプロトコルらしい。  
+・暗号通信を行うプロトコル2つ(AH,ESP)と鍵交換のプロトコル1つ(IKE)が代表的な実装プロトコル  
 
-### ネットワークにおける遅延（レイテンシ）
+### AH(Authentication Header)
 
-[ネットワークにおける遅延（レイテンシ）](https://gist.github.com/hatappo/224c8160c72c1f7649f947caf7fe615a)
-ここが一番参考になる。
-gitでページが飛んでほしくないので、マルコピする。
+IPパケットに認証ヘッダーを付与するプロトコル。  
+IPプロトコル番号51。  
+データそのものは暗号化しない。  
 
-#### 参考
+### ESP(Encapsulated Security Payload)
 
-- [ネットワークの世界における遅延とは](https://www.apposite-tech.com/blog/%e3%83%8d%e3%83%83%e3%83%88%e3%83%af%e3%83%bc%e3%82%af%e3%81%ae%e4%b8%96%e7%95%8c%e3%81%ab%e3%81%8a%e3%81%91%e3%82%8b%e9%81%85%e5%bb%b6%e3%81%a8%e3%81%af/)
-- [ネットワークでなぜ遅延が生じるのか](https://www.slideshare.net/junkato1272/ss-70431661)
+IPパケットに認証暗号を施す。IPプロトコル番号 50。  
+ペイロード部を暗号化する。  
 
-#### ネットワークにおける遅延の種類
+Encapsulated : カプセル化  
 
-##### １．アプリケーション遅延 Processing Delay
+### IKE(Internet Key Exchage)
 
-通信機器の入力IFから出力IFのキューへ到達するまでにかかる時間。
+Security Association構築するのに必要な情報の交換を安全に行うプロトコル。  
+要は鍵交換用のプロトコル。  
+これにも方式が2，3ある。  
 
-``` txt
-`（通信機器の）入力IF`
-    から
-`（通信機器の）出力IFキュー`
-    に入るまでにかかる時間
-```
+association : 連合、共同、合同、提携、協会  
 
-比較的単純なPing/ICMPエコーリクエストなどのアプリケーションでは、このアプリケーションによる遅延は、マイクロ秒単位。 一秒間で数万件の株式の取引が行われる、コンピュータによる「高頻度取引(HFT)」の世界でも無い限り（ナノ秒単位の遅延が問題になるそうです）、アプリケーション遅延は無視されることが多い。
+---
 
-アプリケーションが複雑になってくれば、アプリケーション遅延も大きくなる。
-
-##### ２．輻輳遅延 Queueing Delay
-
-通信機器の出力IFキューに入ってから出力処理を行うまでにかかる時間。 通信機器がデータを転送するためにパケットをバッファに保持している時間。
-
-``` txt
-`（通信機器の）出力IFキュー`
-    に入ってから
-`（通信機器の）出力IFキュー`
-    を出るまでにかかる時間
-```
-
-ある回線上に、その回線の帯域幅以上のパケットが到達してしまった場合、ネットワーク上のルータ(またはスイッチ)は、超過したパケットをバッファに溜め込みます。そのバッファを更に超過した場合、パケットは破棄されます。
-
-広帯域回線から狭帯域回線への転送、一時的な輻輳などのためにこのバッファが存在する。
-
-##### ３．伝送遅延 Serialization Delay
-
-通信機器の出力IFからパケットを電気信号や光信号に変換して送信完了するまでにかかる時間。
-
-``` txt
-`（通信機器の）出力IFのデータ`
-    を
-`電気信号や光信号`
-    に変換するのにかかる時間
-```
-
-・広帯域回線では短く、狭帯域回線では長い。 ・パケットのサイズが大きいと長く、サイズが小さいと短い。
-
-1,500バイトのパケットの送出にかかる時間は ・10GE では 1.2 マイクロ秒 ・64Kbps(ISDN) では 187.5 ミリ秒（約１９万マイクロ秒）
-
-##### ４．伝搬遅延 Propagation Delay
-
-パケットが通信経路上を伝わるのにかかる時間。 （通信機器上で発生する遅延ではない）
-光ファイバの伝搬速度は約２０万km/秒。（真空中だと光の速度は約３０万km/秒。）
-
-- 東京〜⼤阪間 500km 往復 5ミリ秒
-- ⽇本〜アメリカ⻄海岸 海底ケーブル 9,000km 往復 90ミリ秒
-- ⼈⼯衛星 静⽌軌道 上空36,000km 2往復 500ミリ秒
-
+## 条件付確立
 
 ---
 
@@ -207,65 +184,3 @@ gitでページが飛んでほしくないので、マルコピする。
 
 ・俺が仕様書メモとしてまとめてる内容は全て開発フォルダの仕様書フォルダに乗っけておけばいいのでは？
 メモ書き程度のやつは上に持っていくのはどうかな。
-
-
-寝坊するということは、生活が悪いということだ。
-勉強の次に改善すべきはこちらではなかろうか？
-睡眠時間より、勉強の期限を優先しているからこうなる。
-試験がいったん落ち着いても、遅くまで起きているのが常態化しているからこうなる。
-というか、残業して勉強してってなるとどうしても睡眠時間が犠牲になる。
-それを解消するためには、一切の無駄を省いて行動するしかない。
-いや、それ以外にも何かあるだろうけど、すぐには思いつかない。
-
-まぁ、でも遅刻したのが日曜でよかった。
-不幸中の幸いというやつだな。
-
-
-疲れているというか、頭の中があふれているといえばいいか。
-溜まった物事を消化するのに手一杯だ。
-優先度をつけていないからこうなっているのもある。
-手当たり次第にやっているから、あれもこれもって感覚に襲われて消耗する。
-それが今のモヤモヤした感覚の正体ではなかろうか。
-
-終わったものを考える必要はない。
-
-未経験から5つの資格を取得してってのは十分すごい。
-既にIT職にありながら5つの資格ってのは別にすごくない。当たり前というか、もっと短い時間でとれるのでは？って思われても不思議ではない。
-
-
-・定期便
-・選挙
-・映画
-・参考書
-・デスクマット
-
-休んでいる暇がないな。頭の中がやばいことになっている。
-俺にとっての休憩は徹底的にまとめるか、散歩して頭を空にするかのどちらかしかない気がする。
-
-完璧主義が裏にある気がする。
-
-他にやらないといけないことは何がある？
-とりあえず、今日から102を始めるか。
-参考書を読むところから行きますかね。
-まぁ、まだ満足にまとめることができていないのが引っかかるけどね。
-後は、なんか家の中が散らかっているというか、いらないものであふれている気がしてならない。
-少し整理が必要な気がするんだけど・・・。
-
-
-つまらなくしているのは自分。
-全ては自分。
-世界は自分というフィルターを通してでしか見ることができない。
-そのフィルターが汚れ切っているようでは、何をしたって無駄だ。
-
-
-
-火を消す。
-火を起こさないようにする。
-そういえば！というすべての可能性はつぶさないといけない。
-
-
-正直飲み会は行きたくないが、断ったらそれはそれで逆効果だろう。
-そんなこといちいち考えるから俺は駄目なんだ。
-流れに身を任せ、とりあえずこなせばいい。
-変に勘繰るくらいなら、とりあえず参加していたほうが波もたたないだろう。
-
