11月1日出社前

--- a/勉強したいことリスト.md
+++ b/勉強したいことリスト.md
@@ -78,6 +78,8 @@ ORマッパーとはなにか？
 一方通行の関数ではなく
 
 ・クイックソート計算量のnlog nの頭のnってなによ？
+[クイックソートの時間計算量の評価（メモ）](https://qiita.com/warper/items/ae769e105862bfa25310)  
+
 ・構造体のnewの仕方？
 
 ・ネットワーク
@@ -110,6 +112,18 @@ sql where 仕組み
 
 ・IQueryrableについて。
 Whereだけの遅延実行とToList()することによる即時実行のサンプルを作りたい。
+
+[順列と組み合わせの数の公式。どちらを使うのが正しいか迷ったときの便利なテクニック](https://atarimae.biz/archives/11282)  
+
+・符号なし2進数
+→基本情報でやったから問題ないと思うけど。
+・固定小数点数
+→こいつもさんざん調べた。
+
+[10進数から2進数への変換方法の解説です。](http://www.it-license.com/cardinal_number/DecimalToBinary.html#:~:text=%E6%95%B4%E6%95%B0%E3%81%AE10%E9%80%B2%E6%95%B0%E3%82%922%E9%80%B2%E6%95%B0%E3%81%AB%E5%A4%89%E6%8F%9B%E3%81%99%E3%82%8B,%E3%81%AE%E5%A4%89%E6%8F%9B%E7%B5%90%E6%9E%9C%E3%81%A7%E3%81%82%E3%82%8B%E3%80%82)  
+[「2進法の循環小数」はこうなる](http://oto-suu.seesaa.net/article/204829304.html)  
+
+[今日からできるC#のパフォーマンス改善小ネタ10選](https://qiita.com/shun-shun123/items/cb6689a9f210e90b9833)
 
 ---
 
