--- a/AppliedInformation/応用情報メモ.md
+++ b/AppliedInformation/応用情報メモ.md
@@ -1,3 +1,12 @@
+# 応用情報メモ
+
+## 参考サイト
+
+[応用情報技術者試験に合格する勉強方法・対策](https://qiita.com/drken/items/42e54d5c43d4d7815ed4)
+
+---
+
+## よくわからないまとめ
 
 ★午前問題
 
