11月3日会社分

--- a/勉強したいことリスト.md
+++ b/勉強したいことリスト.md
@@ -84,8 +84,6 @@ ORマッパーとはなにか？
 [クイックソートの時間計算量の評価（メモ）](https://qiita.com/warper/items/ae769e105862bfa25310)  
 
 ・構造体のnewの仕方？
-
-・ネットワーク
 ・C# 配列
 ・バニラのWPFで最小のMVVMサンプルを作ってみたい
 ・UTF-8,UNICODE,ShiftJis
@@ -118,6 +116,10 @@ ORマッパーとはなにか？
 [今日からできるC#のパフォーマンス改善小ネタ10選](https://qiita.com/shun-shun123/items/cb6689a9f210e90b9833)
 
 [システム構築の上流工程強化（非機能要求グレード）](https://www.ipa.go.jp/sec/softwareengineering/std/ent03-b.html)
+
+アタッチ デタッチ visual studio
+[プロセスにアタッチ](https://qiita.com/lusf/items/d76a3e718f9b4403142f)  
+[クラスライブラリ(DLL)プロジェクトのデバッグ方法](https://c-loft.com/blog/?p=1793)
 
 ---
 
