--- a/Programming/アルゴリズム.md
+++ b/Programming/アルゴリズム.md
@@ -18,3 +18,32 @@ for(var i = 0 ; array.length; i++){
 
 // O(n^2)
 ```
+
+---
+
+## クイックソートの計算量のO(n logn)の頭のnってなによ？
+
+[クイックソートの時間計算量の評価（メモ）](https://qiita.com/warper/items/ae769e105862bfa25310)  
+
+再帰計算なので、漸化式なるものを使って計算量を求める事になるらしい。  
+なので、厳密にやろうとするとまず漸化式を勉強しなきゃいけないし、  
+勉強してる最中に別のことがわからなくなって更に別の勉強をしてどんどん再帰的になって、本末転倒になりかねない。  
+
+知りたいのは、計算量の求め方ではなく、なぜそうなるのかという理論なのでそこだけでも頑張って汲み取る。  
+
+＊＊大雑把に言って＊＊
+
+``` math
+ｎ個のソート対象を約n/2個の２つの対象に分けます。\\
+その際の比較回数は約n/2回です。\\
+これを再帰的に行います。\\
+再帰の段数（＝平均繰り返し数）\\
+はおおむねfloor(log(2,n))回でありつまりソート完了まで\\
+
+n/2 + 2(n/4) + 4(n/8) + .... + 2^(floor(log(2,n))-1)n/2^floor(log(2,n))\\
+= n(1/2 + 1/2 + ..(floor(log(2,n))個).. + 1/2)～nlog(2,n)/2～nlogn\\
+
+回の比較が行われるわけです。
+```
+
+[なぜクイックソートの平均繰り返し回数がO(logn)で平均の計算量がO(nlogn)なんですか？？](https://detail.chiebukuro.yahoo.co.jp/qa/question_detail/q12159958462?__ysp=6KiI566X6YePLOOCr%2BOCpOODg%2BOCr%2BOCveODvOODiA%3D%3D)  
