--- a/LPIC/102/7.シェル、スクリプト.md
+++ b/LPIC/102/7.シェル、スクリプト.md
@@ -1,5 +1,32 @@
-
 # 1.シェル、スクリプト
+
+
+
+
+``` sh
+while read USERNAME
+do
+    useradd $USERNAME
+    echo $USERNAME | passwd --stdin $USERNAME
+done < $1
+
+```
+
+---
+
+## 小豆本問題
+
+7.4  
+次のスクリプトを実行した際、変数「$#」に入る値を選択してください。  
+$ ./testscript args1 args2
+
+→
+・変数「$#」に入る値→引数の数。
+・$0 には ./testscript
+・$1 には args1
+・$2 には args2
+
+---
 
 ## 最強WEB問題集
 
