--- a/勉強したいことリスト.md
+++ b/勉強したいことリスト.md
@@ -106,6 +106,7 @@ ORマッパーとはなにか？
 →基本情報でやったから問題ないと思うけど。
 ・固定小数点数
 →こいつもさんざん調べた。
+[浮動小数点と固定小数点の表現について](https://qiita.com/izuki_y/items/fb3936192f6ec3f555b2)  
 
 [10進数から2進数への変換方法の解説です。](http://www.it-license.com/cardinal_number/DecimalToBinary.html#:~:text=%E6%95%B4%E6%95%B0%E3%81%AE10%E9%80%B2%E6%95%B0%E3%82%922%E9%80%B2%E6%95%B0%E3%81%AB%E5%A4%89%E6%8F%9B%E3%81%99%E3%82%8B,%E3%81%AE%E5%A4%89%E6%8F%9B%E7%B5%90%E6%9E%9C%E3%81%A7%E3%81%82%E3%82%8B%E3%80%82)  
 [「2進法の循環小数」はこうなる](http://oto-suu.seesaa.net/article/204829304.html)  
@@ -114,12 +115,17 @@ ORマッパーとはなにか？
 
 [システム構築の上流工程強化（非機能要求グレード）](https://www.ipa.go.jp/sec/softwareengineering/std/ent03-b.html)
 
+セッション
+
+Plug and Play
+
+[【解決方法(画像付き)】急に。git pushしたら「Please make sure you have the correct access rights and the repository exists.」](https://kenjimorita.jp/please-make-sure-you-have-the-correct-access-rights-and-the-repository-exists/)  
+
+[条件付確立](https://bellcurve.jp/statistics/course/6438.html)
+
 ---
 
 ## 現在進行形
-
-・クイックソート計算量のnlog nの頭のnってなによ？
-[クイックソートの時間計算量の評価（メモ）](https://qiita.com/warper/items/ae769e105862bfa25310)  
 
 ---
 
@@ -227,3 +233,8 @@ int[][] aa = new int[100][512];
 
 〆・IQueryrableについて。
 Whereだけの遅延実行とToList()することによる即時実行のサンプルを作りたい。
+
+〆・Visual Studio アタッチ、デタッチ
+
+〆・クイックソート計算量のnlog nの頭のnってなによ？
+[クイックソートの時間計算量の評価（メモ）](https://qiita.com/warper/items/ae769e105862bfa25310)  
