--- a/LPIC/102/8.ユーザインターフェイスとデスクトップ.md
+++ b/LPIC/102/8.ユーザインターフェイスとデスクトップ.md
@@ -7,11 +7,56 @@
 
 ## X11のインストールと設定
 
+X Window System (X,X11)  
+XFree86
+X.Org
+
+/etc/X11/xorg.confファイル
+/etc/X11/xorg.conf.dディレクトリ
+
+・exportコマンド  
+環境変数やシェル変数を設定するコマンド。  
+環境変数を定義する。  
+シェル変数を環境変数に、環境変数をシェル変数に変更する。  
+
 ## ディスプレイマネージャーの設定
+
+### ディスプレイマネージャー  
+GUIでログイン画面を表示し、ユーザー認証を行うソフトウェア  
+
+### ウィンドウマネージャー
+Xの外観を制御しているソフトウェア  
+ウィンドウの外観、メニュー、アイコンなどを提供するXクライアント。  
+
+###  統合デスクトップ環境  
+ウィンドウマネージャも含め、アプリケーションまで揃えて統一的な操作を提供したデスクトップ環境。  
+代表例 : GNOME,KDE Plasma  
+
+それなりのCPUパワーや多くのメモリが必要。
+軽快なデスクトップ環境例:
+Xfce,LXDE,MATE
+
+XfceはいつぞやWSLで採用したやつだし、MATEは職場の開発環境のアレだ。  
+
+### KED(KDE Software Compilation)
+デスクトップ環境KDE Plasma、ライブラリ、アプリケーションから構成される大規模なソフトウェア群。  
+Qt(キュート)というGUIツールきっとをベースとして開発された。  
+ディスプレイマネージャー : SDDM  
+ウィンドウマネージャー : KWin  
+OpenSUSE,Slackware,Kubuntuで標準採用  
+
+GNOME : RHEL,CentOS,Fedora,Ubuntuで標準採用  
+ディスプレイマネージャー : GDM  
+ウィンドウマネージャー : Mutter  
+
+
+
+・systemctl  
+システム起動時のサービス起動デーモンsystemdのコントロール用コマンド  
 
 ## アクセシビリティ
 
----
+## 小豆本問題
 
 8.1  
 XサーバとしてX.Orgを利用しています。中心となる設定ファイル名を記述してください。  
