--- a/勉強したいことリスト.md
+++ b/勉強したいことリスト.md
@@ -123,6 +123,13 @@ Plug and Play
 
 [条件付確立](https://bellcurve.jp/statistics/course/6438.html)
 
+自分を制御する方法
+[【flier読書】自分をコントロールする力　非認知スキルの心理学](https://note.com/kajyou/n/n42691d789c66)
+
+アンガーマネジメント
+
+クラサバ構成とは？
+
 ---
 
 ## 現在進行形
