--- a/勉強したいことリスト.md
+++ b/勉強したいことリスト.md
@@ -125,10 +125,21 @@ Plug and Play
 
 自分を制御する方法
 [【flier読書】自分をコントロールする力　非認知スキルの心理学](https://note.com/kajyou/n/n42691d789c66)
-
 アンガーマネジメント
 
 クラサバ構成とは？
+
+ilist list 違い
+[[C#]IEnumerableはListではない](https://7mc.org/2021/04/30/c_sharp_ienumerable_and_list.html)
+
+アクティブレポートの設定の仕方をまとめる。
+ダーティーリードあたりのロックの強度だったり、分離レベルだったりをまとめる。
+
+GORA、その修正がなぜ必要だったのか。
+その「なぜ」がメモにかかれていない。
+次からメモするときは相応のフォーマットを用意してまとめるべきだ。
+エビデンスをさんざん取っておきながら必要な情報に全然たどり着けないのも駄目だ。
+
 
 ---
 
