コミットテスト

--- a/LPIC/102/8.ユーザインターフェイスとデスクトップ.md
+++ b/LPIC/102/8.ユーザインターフェイスとデスクトップ.md
@@ -14,10 +14,7 @@ X.Org
 /etc/X11/xorg.confファイル
 /etc/X11/xorg.conf.dディレクトリ
 
-・exportコマンド  
-環境変数やシェル変数を設定するコマンド。  
-環境変数を定義する。  
-シェル変数を環境変数に、環境変数をシェル変数に変更する。  
+---
 
 ## ディスプレイマネージャーの設定
 
@@ -49,12 +46,31 @@ GNOME : RHEL,CentOS,Fedora,Ubuntuで標準採用
 ディスプレイマネージャー : GDM  
 ウィンドウマネージャー : Mutter  
 
+### VNC(Virtual Network Computing)
+Windows,Linux,MaxOSなどクロスプラットフォーム対応のリモードデスクトップソフトウェア。  
+デスクトップを提供する側でVNCサーバーを稼働させる。  
 
+稼働コマンド : `vncserver :1`  
+終了コマンド : `vncserver -kill :1`  
 
-・systemctl  
-システム起動時のサービス起動デーモンsystemdのコントロール用コマンド  
+---
 
 ## アクセシビリティ
+
+---
+
+## 復習
+
+### exportコマンド  
+環境変数やシェル変数を設定するコマンド。  
+環境変数を定義する。  
+シェル変数を環境変数に、環境変数をシェル変数に変更する。  
+
+### systemctl  
+システム起動時のサービス起動デーモンsystemdのコントロール用コマンド  
+
+
+---
 
 ## 小豆本問題
 
