--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -6,3 +6,28 @@
 
 ・俺が仕様書メモとしてまとめてる内容は全て開発フォルダの仕様書フォルダに乗っけておけばいいのでは？
 メモ書き程度のやつは上に持っていくのはどうかな。
+
+
+今日タイヤ交換したかったな。
+昼休みに散歩したけど、やっぱり今日が最高だったかもしれん。
+明日は雨らしい。タイミングが悪いね。
+
+
+今日は自転車。イヤーマフのおかげで全然問題ない。
+涙は出るけど、それは仕方ない。でも、痛みはないからそれと比べたらへでもない。
+100円で自転車通勤の苦しみを解決できたことになるよな。
+すごいことだよな。
+
+
+髪が伸びてきたので明日切りましょう。
+明日はタイヤ交換もしないといけない。
+忙しいな。
+
+
+昼休みに自転車のスローパンク対応しました。
+右と左も分からなくなっており、逆に回してぷしゅーってやってしまった。
+今日に限って空気入れ持ってきてないから、割と死活問題。
+締める方向をちゃんとしたらぷしゅーはおさまった。
+これでしばらく様子を見る。
+念のため前のほうも確認したけど、そっちはびくともしなかったので、多分ここが原因かなって思う。
+
