何もやってないけど変更はあったから上げておく

--- a/AppliedInformation/応用情報メモ.md
+++ b/AppliedInformation/応用情報メモ.md
@@ -2,7 +2,10 @@
 
 ## 参考サイト
 
-[応用情報技術者試験に合格する勉強方法・対策](https://qiita.com/drken/items/42e54d5c43d4d7815ed4)
+[応用情報技術者試験に合格する勉強方法・対策](https://qiita.com/drken/items/42e54d5c43d4d7815ed4)  
+
+今回は組込みシステム開発を行ってみようと思う。  
+どのサイトでもおすすめされている。  
 
 ---
 
