--- a/LPIC/102/8.ユーザインターフェイスとデスクトップ.md
+++ b/LPIC/102/8.ユーザインターフェイスとデスクトップ.md
@@ -1,4 +1,4 @@
-# ユーザーインターフェースとデスクトップ
+# 8.ユーザーインターフェースとデスクトップ
 
 結局のところ、参考書の内容はすべて試験に出ると思っていいので、全部まとめて損はない気がする。
 コマンド、設定ファイル、設定ファイルの内容は基より、なんなら説明も含めて全部まとめてもいいのではないだろうか。
