--- a/Trivia/雑学.md
+++ b/Trivia/雑学.md
@@ -101,3 +101,8 @@ https://gigazine.net/news/20200807-hair-deforms-steel-blade/
 メジャーで図って3㎝だったけど、ヤマトで測ってもらったらギリギリOKもらえた。  
 こういう時のために、梱包は新聞紙までにとどめて、封筒を一緒に持っていき、
 ヤマトさんに計測してもらってOKなら封筒で駄目だったら専用の箱って切り替えができるようにしたほうがいい。  
+
+### ゆうパケットプラスの箱は再利用可能
+
+調べたら再利用可能ということ。  
+程度にもよるみたいだが、本当にこれで問題がないなら、それでやってみて、また結果を書き込みたい。  
