--- a/Trivia/雑学.md
+++ b/Trivia/雑学.md
@@ -105,4 +105,7 @@ https://gigazine.net/news/20200807-hair-deforms-steel-blade/
 ### ゆうパケットプラスの箱は再利用可能
 
 調べたら再利用可能ということ。  
-程度にもよるみたいだが、本当にこれで問題がないなら、それでやってみて、また結果を書き込みたい。  
+程度にもよるみたいだが、本当にこれで問題がないなら、やってみてまた結果を書き込みたい。  
+
+行けた。  
+ただ、受付のお兄ちゃんが裏に確認に行ったので、程度の確認はしてもらったほうがいいのかもしれない。  
