--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -1,8 +1,32 @@
 # 後でまとめたいやつら
 
+## 従食(じゅうしょく)とは？まかないとは？
+
+[ファミレス各社の従食（まかない）どこが豪華で美味しい？](https://tenshoku-restaurants.com/blog/272)  
+
+従食(じゅうしょく)とは「従業員食事割引制度・食事補助」といった従業員の食事に対して会社側がいくらか負担するものです。  
+簡単にいうと「お客様に提供してる料理を安く食べることができる」制度です。  
+
+一方「まかない」は、一般的にお店から「無料で従業員に提供される食事」とされています。  
+
+→  
+従食は「有料」  
+まかないは「無料」  
+
+
+##
+
+値型なので、newする必要はない。
+newはコンストラクタを呼ぶ。
+new自体はできる。
+言語仕様に近いので中々濃い内容になっている。
+
+煩雑
+煩わしい
+締め日とは
+edi
+ウェビナー
+
 ---
 
 ## 雑記
-
-・俺が仕様書メモとしてまとめてる内容は全て開発フォルダの仕様書フォルダに乗っけておけばいいのでは？
-メモ書き程度のやつは上に持っていくのはどうかな。
