102ネットワークDNS

--- a/LPIC/102/11.ネットワークの基礎.md
+++ b/LPIC/102/11.ネットワークの基礎.md
@@ -1,2 +1,124 @@
 # 11.ネットワークの基礎
 
+## TCP/IPの基礎
+
+## ネットワークの設定
+
+## ネットワークのトラブルシューティング
+
+## DNSの設定
+
+・/etc/resolv.confファイル  
+・/etc/nsswitch.confファイル  
+・/etc/systemd/resolved.confファイル  
+・hostコマンド  
+・digコマンド  
+
+
+■DNSの設定ファイル  
+
+●DNSサーバー、ドメイン名の設定  
+`/etc/resolv.confファイル`  
+
+``` conf : /etc/resolv.confファイルの記述例
+domain infraeye.com
+search infraeye.com
+nameserver 192.168.231.2
+```
+
+domain行 : このホストが所属するドメイン名を記述する。  
+serach行 : ドメイン名の省略時に補完するドメイン名を記述。  
+nameserver行 : DNSサーバーのIPアドレスを記述。複数行を記述可能。応答が無ければ次の行を参照する。  
+
+
+●名前解決の問い合わせ順の設定  
+`/etc/nsswitch.confファイル`  
+
+主な名前解決の方法  
+・etc/hostsファイルでの問い合わせ→files  
+・LDAPサーバーへの問い合わせ→ladp  
+・DNSサーバーへの問い合わせ→dns  
+
+以下の記述例の場合、ホスト名の名前解決のために最初に/etc/hostsファイルを参照し、次にLDAPサーバーに問い合わせ、最後にDNSサーバーに問い合わせるように定義している。  
+
+``` conf : /etc/nsswitch.confファイルの設定例
+hosts: files ldap dns
+```
+
+
+●systemdでの名前解決
+systemdを採用したディストリビューションでは、名前解決にsystemd-resolvedサービスが使われる。  
+`etc/systemd/resolved.confファイル`で設定を行う。  
+
+``` conf : /etc/systemd\resolved.conf
+[Resolve]
+DNS=192.168.11.1 8.8.8.8
+Domains=example.com
+```
+
+systemd-resolvedサービスを有効にするコマンド  
+`systemctl restart systemd-resolved.service`  
+
+
+
+■DNS管理コマンド  
+
+●hostコマンド  
+DNSサーバーを使ってホストやドメインに関する情報を表示する。  
+
+●digコマンド  
+DNSサーバーに対して問い合わせを行い、その応答結果を表示するコマンド。  
+nslookupコマンドはDNSサーバーからの応用を加工して表示するが、digでは応答を加工せずに表示する。  
+
+●whoisコマンド  
+調べたいドメイン名を指定して、whoisデータベースに問い合わせるコマンド。  
+
+---
+
+## 小豆本問題
+
+1.エラーメッセージや制御メッセージを伝送するコネクションレス型のプロトコルで、pingやtracerouteコマンド等で利用されているものを選択してください。  
+
+pingという地点でネットワーク層。
+プロトコルなので、internet protcol management protocol
+
+2.以下のIPアドレスの中から、プライベートアドレスとして利用できるものを全て選択してください。
+
+10.0.0.0~10.255.255.255
+172.16.0.0~172.31.255.255
+192.168.0.0~192.168.255.255
+
+A,E
+
+3.ネットワークサービスの名称とそのサービスが標準的に利用するポート番号の対応が記述されているファイルを絶対パスで記述してください。  
+
+4.デフォルトで53番ポートを利用するサービスを選択してください。
+80と25と443しか知らない。
+
+5.example.com ドメインのメールサーバー情報を問い合わせたい場合、下線部に当てはまる適切なパラメータを記述してください。  
+dig___
+
+dig -mx example.com×
+dig example.com mx
+
+6.離れたネットワークにあるホストAとの通信が出来なくなりました。
+ホストAまでは複数のルータを経由しており、ローカルネットワーク内では通信に問題はないことから、ホストAとローカルネットワークの間に障害が発生していると考えられます。  
+障害の発生している場所を特定するために最も役立つと考えられるコマンドを選択してください。
+
+→
+複数のルーターを跨ぐ。どこ地点で死んでいるか調べるためにはルートを検索すべき。
+なので、tracerouteでは無かろうか？
+合ってた。
+
+7.NetworkManagerでネットワークを管理しています。以下のコマンドを実行してネットワークの接続情報を表示しました。
+$____conn show
+
+
+8.ネットワークインターフェースeth0に、IPアドレス「10.10.0.5」、サブネットマスク「255.255.255.0」を設定したい場合、実行すべきコマンドを選択してください。  
+
+
+9.以下のIPv6アドレスの省略された表記として適切なものを全て選択してください。
+2001:0db8:0000:0000:0023:0000:0000:0045
+
+2001:db8::23:0:0:45  
+2001:db8:0:0:23::45  
