--- a/勉強したいことリスト.md
+++ b/勉強したいことリスト.md
@@ -80,7 +80,6 @@ ORマッパーとはなにか？
 ・ハッシュとは？
 一方通行の関数ではなく
 
-・構造体のnewの仕方？
 ・C# 配列
 ・バニラのWPFで最小のMVVMサンプルを作ってみたい
 ・UTF-8,UNICODE,ShiftJis
@@ -135,9 +134,19 @@ ilist list 違い
 アクティブレポートの設定の仕方をまとめる。
 ダーティーリードあたりのロックの強度だったり、分離レベルだったりをまとめる。
 
+
+
+煩雑
+煩わしい
+締め日とは
+edi
+ウェビナー
+
 ---
 
 ## 現在進行形
+
+・構造体のnewの仕方？
 
 ---
 
