--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -13,19 +13,17 @@
 従食は「有料」  
 まかないは「無料」  
 
+---
 
-##
+## C# 構造体
 
-値型なので、newする必要はない。
-newはコンストラクタを呼ぶ。
-new自体はできる。
-言語仕様に近いので中々濃い内容になっている。
+値型なので、newする必要はない。  
+でもnewはできる。  
+newはコンストラクタを呼ぶ。  
+newしない場合コンストラクタを呼ばない。  
+そういう棲み分けができる。  
 
-煩雑
-煩わしい
-締め日とは
-edi
-ウェビナー
+言語仕様に近いので中々濃い内容になっている。  
 
 ---
 
