grep,構造体,ウェビナーとか言葉の意味,少し整理

--- a/RegularExpression/正規表現メモ.md
+++ b/RegularExpression/正規表現メモ.md
@@ -46,6 +46,88 @@
 
 ---
 
+## ある文字からある文字までの間を抜き出す場合
+
+``` regexp
+(?<=開始文字列.* ).*?(?= 終了文字)
+```
+
+多分これで行ける。  
+場合によって色々試す必要はあると思われる。  
+
+[How to use sed/grep to extract text between two words?](https://stackoverflow.com/questions/13242469/how-to-use-sed-grep-to-extract-text-between-two-words)  
+
+``` bash
+$ echo 'Here is a string, and Here is another string.' | grep -oP '(?<=Here).*(?=string)' # Greedy match
+is a string, and Here is another 
+$ echo 'Here is a string, and Here is another string.' | grep -oP '(?<=Here).*?(?=string)' # Non-greedy match (Notice the '?' after '*' in .*)
+is a 
+is another 
+```
+
+帳票の項目一覧を印刷データクラスから抜き出す時に調べた内容。  
+この例でいれば、stringと中カッコはじめの間のフィールド名だけを抜き出したい。  
+「○○と○○の間」みたいに調べたけど当然ヒットしない。  
+調べるならこっちだったね。→「grep from to string」  
+
+``` C#
+    /// <summary>
+    /// 年月開始
+    /// </summary>
+    public string FromBusinessYM { get; set; }
+    /// <summary>
+    /// 年月終了
+    /// </summary>
+    public string ToBusinessYM { get; set; }
+```
+
+``` regexp
+(?<=public .* ).*?(?= \{)
+```
+
+これでちょうど真ん中が取れた。  
+
+### 余談
+
+余談ではあるが、感動したことがあるのでまとめたい。  
+
+``` txt
+/// 年月開始
+public string FromBusinessYM 
+/// 年月終了
+public string ToBusinessYM 
+
+これを
+
+public string FromBusinessYM /// 年月開始
+public string ToBusinessYM /// 年月終了
+
+こうしたかった。
+```
+
+最初は仕方なく、手でやってたけど、最終的に一発でできる方法を見つけたので感動してまとめた。  
+
+①`^/// .*`でgrepする。  
+②`Alt + Enter`する。  
+③コピーして矢印キーで移動する。  
+→するとドキュコメがあった場所の間隔を保持したまま全てのカーソルを移動させることができる。  
+④各フィールドの最終行にカーソルを持って行ってペーストする。  
+→ついでにそのまま元のドキュコメを削除できるので消してしまう。  
+
+何とか出来そうで出来なかった問題を解決できるととても気持ちが良い。  
+
+[VSCodeで正規表現検索にマッチした文字列だけをコピーする方法](https://www.exceedsystem.net/2020/11/21/how-to-copy-regex-search-results-in-vscode/)  
+[Visual Studio Code キーボード ショートカット](https://qiita.com/oruponu/items/ae9c720d4522c1606daf)  
+→`Alt+Enter : すべての一致項目を選択`  
+
+[データのアリ/ナシをチェックしたい COUNTIF 関数](https://www.crie.co.jp/chokotech/detail/4/)  
+[CSVファイルを開いたら文字化け発生！「Power Query」で文字コードを指定して取り込みましょう](https://forest.watch.impress.co.jp/docs/serial/exceltips/1290315.html)  
+
+ついでに、勘違いしてフィールドが使われてるかどうか比較してた時に見たやつも乗せる。  
+VSCodeでカンマ区切りにして、csvとして保存して、エクセルにインポートするやり方もこれでやった。  
+
+---
+
 ## 開始文字から終了文字まで複数行の検索
 
 [VS Codeで複数行に渡って正規表現を利用する](https://qiita.com/birdwatcher/items/dee34a11619b11e1fe81)  
