--- a/Trivia/言葉の意味.md
+++ b/Trivia/言葉の意味.md
@@ -1,16 +1,39 @@
 # 言葉の意味まとめ
 
-・難儀（なんぎ)  
+・難儀(なんぎ)  
 1 苦しみ悩むこと。苦労すること。また、そのさま。「腰を屈めるのも難儀だ」「雪道を行くのに難儀する」  
 2 面倒なこと。迷惑なこと。また、そのさま。「難儀をかける」「難儀な話をもちこむ」  
 3 処理するのがむずかしいこと。また、そのさま。一大事。  
+
+・「難儀やなぁ」の意味  
+主に、関西弁で他人の体験に同情、共感するなどした場合に「大変だねえ」という意味で用いられる表現。  
+「難儀」自体には「苦労、困難、面倒」といった意味がある。  
+また、自分自身が厄介な状況に陥った時に、「参ったな」という意味で用いられたり、迷惑をかける人を咎めるために用いられたりすることもある。  
 
 ・瑕疵(かし)  
 通常、一般的には備わっているにもかかわらず本来あるべき機能・品質・性能・状態が備わっていないこと。  
 特定の売買契約においてその目的物に何らかの欠陥・不具合があることで、その品質や性能が損なわれている状態を指しています。  
 
 ・勘当(かんどう)  
-近世以後、親が子との縁を切ること、すなわち懲戒の意味で、親が子を家から追放する行為をさすようになった。親族関係も当然断絶されるわけで、その意味で久離(きゅうり)の一種とも考えられる。事実、江戸町奉行(ぶぎょう)所では、久離を欠落(かけおち)久離、勘当を追出(おいだし)久離とよんで区別するようになった。
+親が子との縁を切ること。  
+すなわち懲戒の意味で、親が子を家から追放する行為をさすようになった。親族関係も当然断絶されるわけで、その意味で久離(きゅうり)の一種とも考えられる。事実、江戸町奉行(ぶぎょう)所では、久離を欠落(かけおち)久離、勘当を追出(おいだし)久離とよんで区別するようになった。
+
+・棄却(ききゃく)  
+一般には「あるものを捨てて、以降は問題にしないこと」  
+どちらかというと、専門分野(統計学等)で用いられる言葉みたい。  
+俺はなぜこの言葉を使うのか。  
+プログラミングではあまり使わないはずだ。  
+
+・煩雑(はんざつ)  
+煩雑な手続きでおなじみ。  
+面倒くさいってニュアンスは十分に伝わってくるけど、実際の意味は？ということで調べた。  
+「込み入って煩わしいこと」  
+「やらねばならないことが多くあり、込み入っていること」
+→これが一番しっくり来るかな。  
+
+・煩わしい(わずらわしい)  
+「面倒で気が重い。また、入り組んで煩雑だ。」  
+つまり面倒ってことだ。  
 
 ---
 
