--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -6,25 +6,27 @@
 
 従食(じゅうしょく)とは「従業員食事割引制度・食事補助」といった従業員の食事に対して会社側がいくらか負担するものです。  
 簡単にいうと「お客様に提供してる料理を安く食べることができる」制度です。  
-
 一方「まかない」は、一般的にお店から「無料で従業員に提供される食事」とされています。  
 
 →  
 従食は「有料」  
 まかないは「無料」  
 
----
+## ウェビナー
 
-## C# 構造体
+田中さんが知らなくて怒られたみたい。  
+まぁ俺も知らないんだけどね。  
+というわけで、まとめます。  
 
-値型なので、newする必要はない。  
-でもnewはできる。  
-newはコンストラクタを呼ぶ。  
-newしない場合コンストラクタを呼ばない。  
-そういう棲み分けができる。  
-
-言語仕様に近いので中々濃い内容になっている。  
+・ウェブとセミナーを組み合わせた造語。  
+・ウェブセミナー、オンラインセミナーとも言う。  
+・インターネット上で行うセミナーそのもの、もしくはそのためのツールの名称。  
+・数十~数百人規模の対話型セミナーを主用途とする。  
+・参加者との対話が可能な点が今までのネット上のセミナーと大きく違うのが特徴とか何とか。  
+・Zoomなんかが主たるサービスになる。(他 Microsoft Terms等)  
 
 ---
 
 ## 雑記
+
+今日はgrepな日だったな。
