--- a/BasicInformation/基本情報令和3年秋期反省.md
+++ b/BasicInformation/基本情報令和3年秋期反省.md
@@ -52,7 +52,7 @@
 ## 経過
 
 少し睡眠不足気味ではあったが、よく眠れた。
-試験の前日は大抵は緊張して、眠れないのだが寝れて何よりであった。
+大抵、試験の前日は緊張して眠れないのだが、今回は寝れてよかった。
 朝は慌てることなく、事前に決めた準備を済ませて8時に出発した。
 
 この日は濃霧だった。
@@ -61,28 +61,30 @@
 ごちゃごちゃいうのも大切だ。
 特にストレスは感じていなかった。
 
-モダのところでガソリンを入れる事にしていたので、入ったのだが、164円と滝川のほうが安いまであった。
+モダのところでガソリンを入れる事にしていたのだが、164円と滝川より高かった。
 仕方なく入れたけど、終わってから思ったが、別に入れる必要はなかったと思った。
 帰りにアサヒ商会のところで入れたほうがよかった。
+
 トイレ休憩を済ませ、スマホのナビを起動して駐車場に向かった。
 駐車場は1台しか開いておらず、入ったら満車の表示が出た。
 運がいいと思った。
 逆に運を使ってしまったかと思った。
 少し小腹が空いたので、車の中でお湯とナッツを食べて、近くのコンビニで用を足して会場に向かった。
-1時間の余裕があったので、着いた時はまだ受付すらしていなかったので、とりあえず休憩スペースなるところで軽く復習することにした。
+1時間の余裕があったので、着いた時はまだ受付すらしていなかった。
+とりあえず休憩スペースで軽く復習することにした。
 30分前になったので、改めてトイレを済ませて、会場である6階に移動した。
 受け付けは開始していた。
-そのまま予約した時間まで待つかとおもったけど、普通に説明が始まって試験室に通された。
-予約した時間になっていなかったけど、試験を開始することが出来た。
+予約した時間まで待つかとおもったけど、普通に説明が始まって試験室に通された。
+予約時間前だったが、試験を開始することが出来た。
 
-試験開始の時はとても緊張したが、符号あり1byteの取りえる範囲は幾らか？って問題が出たときは目を疑ってしまいました。
+試験開始の時はとても緊張したが、符号あり1byteの取りえる範囲は幾らか？って問題が出たときは目を疑ってしまった。
 基数の問題がまさかこれだけ？って感じでした。
 以降の問題もそんな感じの問題ばかりでした。
 直前で復習した内容がそのまま出たものもありました。
 
 CBT形式になった影響なのか、明らかに簡単になっているのを感じました。
 過去問ほど計算問題は出ないし、めちゃくちゃ単純な問題ばかり。
-ただ、知識として知っていないと解けない問題も出たので、そういうのはわからなかったので、直観で答えました。
+ただ、知識として知っていないと解けない問題も出て、そういうのはわからなかったので直観で答えました。
 まぁ、普通に午前は受かっただろうなーと思いながら、30分を残してみっちり見直しして、退出しました。
 12時近くなったあたりで、空腹で頭が働くなって来たのを実感しました。
 こういうのを含めて、ナッツよりバナナのほうがよかったなと思いました。
