正規表現まとめ途中

--- a/RegularExpression/正規表現メモ.md
+++ b/RegularExpression/正規表現メモ.md
@@ -11,12 +11,27 @@
 `$` : 行末  
 `\` : エスケープシーケンス  
 
-拡張正規表現  
+■拡張正規表現  
 `+` : 直前の文字の1回以上の繰り返し  
 `?` : 直前の文字の0回以上の繰り返し  
 `|` : 左右のいずれかの記述にマッチする  
 `{n}` : 直前の文字のn回の繰り返し  
 `{n,m}` : 直前の文字のnからm回の繰り返し  
+
+■ちょっとした応用
+`\n` or `\r\n` : 改行コード  
+`^$` : 何も文字のない改行だけの行  
+`.*` : 任意の0文字以上  
+`.+` : 任意の1文字以上  
+
+■肯定先読み・否定先読み、肯定後読み、否定後読み  
+`(?=regex)`:直後にregexがある  
+`(?!regex)`:直後にregexが無い  
+`(?<=regex)`:直前にregexがある  
+`(?<!regex)`:直前にregexが無い  
+
+[こんどこそわかる(肯|否)定(先|後)読み](https://qiita.com/tohta/items/2ba7ecde5636b38ef1f6)  
+[先読みと後読みを使ったパターン](https://www.javadrive.jp/regex-basic/writing/index2.html)  
 
 ---
 
@@ -41,6 +56,9 @@
 ## 改行コードだけ
 
 ```regexp
+^\n
+^\r\n
+^$
 ^([*\n])
 ```
 
