--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -25,8 +25,15 @@
 ・参加者との対話が可能な点が今までのネット上のセミナーと大きく違うのが特徴とか何とか。  
 ・Zoomなんかが主たるサービスになる。(他 Microsoft Terms等)  
 
+## 締めとは？
+
+
+## 扶養とは？
+
+
+## 控除とは？
+
+
 ---
 
 ## 雑記
-
-今日はgrepな日だったな。
