締め日、扶養、控除

--- a/LPIC/102/11.ネットワークの基礎.md
+++ b/LPIC/102/11.ネットワークの基礎.md
@@ -2,9 +2,45 @@
 
 ## TCP/IPの基礎
 
+・TCP(Transmission Control Protocol)  
+・IP(Internet Protocol)  
+・IPv6
+・UDP(User Datagram Protocol)  
+・ICMP(Internet Control Message Protocol)  
+・サブネット、ネットワークアドレス、ブロードキャストアドレス、プライベートアドレス  
+・CIDR(Classless Inter-Domain Rounting)  
+・ウェルノウンポート  
+・/etc/servicesファイル  
+
+---
+
 ## ネットワークの設定
 
+・etc/hostnameファイル  
+・etc/hostsファイル  
+・etc/network/interfacesファイル  
+・etc/sysconfig/network-scriptsディレクトリ  
+・NwtworkManager  
+・nmcliコマンド  
+・hostnamectrlコマンド  
+
+---
+
 ## ネットワークのトラブルシューティング
+
+・pingコマンド  
+・tracerouteコマンド  
+・tracepathコマンド  
+・hostnameコマンド  
+・netstatコマンド  
+・ncコマンド  
+・routeコマンド  
+・ipコマンド  
+・ifconfigコマンド  
+・ifupコマンド  
+・ifdownコマンド  
+
+---
 
 ## DNSの設定
 
