--- a/RegularExpression/正規表現メモ.md
+++ b/RegularExpression/正規表現メモ.md
@@ -33,6 +33,11 @@
 [こんどこそわかる(肯|否)定(先|後)読み](https://qiita.com/tohta/items/2ba7ecde5636b38ef1f6)  
 [先読みと後読みを使ったパターン](https://www.javadrive.jp/regex-basic/writing/index2.html)  
 
+``` regex : 例
+(?<=hoge)foo(?!bar) → 直前にhogeがあり、直後にbarが無いfooにマッチ
+(?<!hoge)foo(?=bar) → 直前にhogeが無くて、直後にbarがあるfooにマッチ
+```
+
 ---
 
 ## ○○を含む、AND（かつ）、△△を含まない
