--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -27,12 +27,39 @@
 
 ## 締めとは？
 
+金銭や数量などの合計を出すこと。  
+会社で行った取引を全て確定させるための区切りの事こと。  
+締め切りの会計処理版。  
+
+例:  
+給料における締め日は、給料を計算する期間の最終日を指す。  
+支払い日は締め日を持って計算された給料を従業員に支払う日を指す。  
+・末日締め→1日～末日までの勤務分の給料が支払われる  
+・10日締め→前月11日～今月10日までの分  
+・25日締め→前月26日～今月25日までの分  
+
+うちの場合、支払い日は10日だけど、だからと行って10日締めなわけではないはず。  
+だから、締め日と支払い日は違っても別におかしな事ではないんだな。  
 
 ## 扶養とは？
 
+助け養うこと。生活できるように世話をすること。  
+自分一人の力で生活することが難しいため、家族や親族から経済的な援助を受けること。  
 
 ## 控除とは？
 
+金額を差し引くこと。  
+大抵の場合は税金を安くしてくれる優遇制度の事を指す。  
+
+### 控除の種類
+
+所得控除→所得から一定の金額を差し引くことで税金を安くしてくれる制度  
+配偶者控除→配偶者がいれば所得から一定の金額を差し引いて税金を安くしてくれる制度  
+扶養控除→養うべき家族がいれば、所得から一定の金額を差し引いて税金を安くしてくれる制度  
+→例えば、妻の所得が103万円以下で夫の稼ぎが900万くらい以下なら38万円満額の扶養控除が受けられるっぽい。  
+
+そのほかにも色々あるけど、代表的なのはこんなところじゃないかな。  
+因みによく聞く103万円ってのは所得税が発生するラインが103万円だからっぽい。  
 
 ---
 
