マイクロサービス、プラグアンドプレイ、FlexGridの追加のイベントについて

--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -63,4 +63,90 @@
 
 ---
 
+## マイクロサービス
+
+福田さんが発したのでまとめ。  
+これくらいの単語なら既にまとめているようなモノだと思っていたが、意外とまとめていなかった。  
+
+なんてことはない、SOAの概念の1部みたいだ。  
+1つ1つの機能を部品として細かくわけて、使うときは組み合わせて使うサービスのあれね。  
+コーディング然り、サービス然り、ITの世界においては、小さく作ることは正義なのだ。  
+
+``` txt : wiki
+ソフトウェア開発技法の1つ。
+1つのアプリケーションをビジネス機能に沿った複数の小さいサービスの疎に結合された集合体として構成するサービス志向アーキテクチャ(SOA)の1種。
+マイクロサービスアーキテクチャでは、各サービスはきめ細かい粒度を持ち、軽量なプロトコルを用いて通信を行う。
+```
+
+``` txt : マイクロサービスで検索したら一番上に出てくる説明
+小さな独立した複数のサービスでソフトウェアを構成する、ソフトウェア開発に対するアーキテクチャ的、組織的アプローチ。
+各サービスは、正確に定義されたAPIを通じてやり取りする。
+これらのサービスは小規模の自己完結できるチームが所有する。
+```
+
+---
+
+## ファームウェア
+
+ハードウェアを動かすためのソフトウェア  
+
+https://wa3.i-3-i.info/word12773.html
+https://wa3.i-3-i.info/diff176driver.html
+
+## プラグアンドプレイ(Plug and Play, PnP)
+
+USBとか刺したときにデバイスドライバとか自動的にダウンロードしてくれたりするアレ。  
+単語を知らなかった。恥ずかしい限りである。  
+
+``` txt : wiki
+PCに周辺機器や拡張カード等を接続した際にハードウェアとファームウェア、ドライバ、オペレーションシステム、およびアプリケーション間が自動的に強調し、
+危機の組み込みと設定を自動的に行う仕組みのこと。
+パソコンのユーザービリティ(使い勝手)を向上させる技術の1つ。
+ドライバの自動インストール機能。
+つないだら(plug)、ユーザーが何か特別なことをしなくても実行(play)できる、という意味。
+```
+
+今の時代、刺せば大抵使えるから別に珍しくもなんともないけど、パソコンの黎明期はそうでもなかったんだな。  
+
+---
+
 ## 雑記
+
+源泉徴収の次は人事考課か。
+忙しいなぁ。
+猶予が1週間なのやめてくれないか。
+人事考課が近いので、各々考えておいてください。
+ファイルは後でお送りしますって感じの段階構えでもいいような気がするけどなぁ。
+
+
+
+いつも疑問に思っていることがある。
+会社のキーボードって付属品の安物であるはずなんだが、とても使いやすいんだよな。
+打鍵感も悪くない。メンブレンのくせしてこの差は何なのだろうか。
+キーボードというより、このデスクと組み合わさった結果に思える。
+会社では肘をデスクにのっけて打ってる。
+これがでかいのかなぁ。
+死んでもパームレストは使いたくないしなぁ。
+肘のっけてる状態がセルフパームレストになってたりしてね。
+
+デスクマットは今でも十分だけど、どうせならもっといいもの使いたいという欲望はある。
+モバイルバッテリーはコードが内蔵されているタイプにしたい。
+
+
+サラブレッドは気性が荒いらしい。
+優秀な人間ばかりを集めた組織が失敗するのは、そういう暴れ馬を1つにまとめてしまうからで、喧嘩が起きてそれにエネルギーを割いてしまうからだとか。
+優秀な人間は性格のいい人間ばかりかと思っていたが、そういうわけでもないのか？
+まぁ、世の中を見ていれば、大企業の不祥事とか色々あるもんな。
+
+
+唇のブツブツが再発した。
+瞼のピクピクも発生した。
+寝てるときに足がピクピクするようになってきた。
+→ストレスがやばい。
+
+・ストレスがやばい(唇のブツブツ、瞼のピクピク)
+
+・クーポン使うために3000円でいったん会計して貰うように交渉できた
+
+AC2AAOP
+そうみ
