--- a/Other/どうでもいいもの/自己申告書.md
+++ b/Other/どうでもいいもの/自己申告書.md
@@ -1,5 +1,26 @@
 # 自己申告書
 
+
+担当する仕事の処理量は期待通りにこなせたか（一定期間内では迅速にこなせたか）		
+仕事において、あらかじめ定められたスケジュール通り実行することができたか		
+仕事の質の面（最終的なできばえ）は期待に応えることができたか		
+仕事の処理手順や方法は適切であったか		
+同じミスを繰り返すことはなかったか		
+クレームやトラブルの際の初期対応は適切であったか		
+担当の仕事に関して資料・情報等の整理は適切に行えたか		
+欠勤・遅刻・早退も問題なく、時間管理はきちんとできていたと言えるか		
+社員としてふさわしい、言葉遣いや身だしなみなどのエチケットには気を配っていたか		
+上司や先輩の指示に従い、また就業規則や職場ルールを正しく守っていたか		
+上司や先輩に対して自ら協力しようとする姿勢がみられたか		
+同僚や後輩の仕事の進み具合にもよく気が付き、自発的に手伝おうとしたか		
+自分の担当業務のみに固執することはなかったか		
+担当業務について少しでも早くマスターしようとする姿勢がみられたか		
+手の空いた時間を他の仕事に当てるなど勤務時間を有効に使おうとしていたか		
+社会人として知識や技能の取得、向上に向けて努力する姿勢はみられたか		
+自分が受けた仕事は最後まで手を抜かず、誠実に成し遂げようとしたか		
+困難なあるいは、わずらわしい仕事でも嫌がらずに進んで行ったか		
+仕事の過ちについて、回避しようとすることはなかったか		
+
 ## 令和２年度下期の実績・成果・反省点、資格
 
 ``` TXT
