インデクサー＋その他

--- a/English/その他英単語.md
+++ b/English/その他英単語.md
@@ -28,7 +28,8 @@ LOLのリデンプションは救済って意味だろうな。
 
 ## 趣味
 
-・QED : Quod Erat Demonstrandum : かく示された
+・QED(Quod Erat Demonstrandum)
+かく示された
 
-●ALL WILL BE ONE
+・ALL WILL BE ONE
 New phyrexia
