--- a/Trivia/言葉の意味.md
+++ b/Trivia/言葉の意味.md
@@ -35,6 +35,18 @@
 「面倒で気が重い。また、入り組んで煩雑だ。」  
 つまり面倒ってことだ。  
 
+・門外漢(もんがいかん)  
+「もんかんがい」って言ってしまいました。恥ずかしい。  
+違和感はあったんですけどねぇ。  
+ついでなので言葉の意味も覚えておきます。  
+
+``` txt
+畑違いの人。  
+その物事について専門家ではない人。  
+```
+
+個人的には、そのプロジェクトに関わりがない人のことだと思ってたけど、厳密には違うのな。  
+
 ---
 
 ・深謀遠慮(しんぼう-えんりょ)  
