--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -88,10 +88,33 @@
 
 ## ファームウェア
 
-ハードウェアを動かすためのソフトウェア  
+[わかりそう](https://wa3.i-3-i.info/word12773.html)  
 
-https://wa3.i-3-i.info/word12773.html
-https://wa3.i-3-i.info/diff176driver.html
+ハードウェアの中に住んでいる、そのハードウェアを動かすためのソフトウェア(プログラム)のこと  
+
+firm : 硬い、堅固(けんご)  
+どうでもいいが「堅固」を毎回、「けんこ」って読む。  
+
+ハードウェアの中に組み込まれて、あまり変更されないっぽい。  
+でもファームウェアの更新とかよく聞くから、更新出来ないわけではないんだろうな。  
+因みにBIOSもパソコンにとってのファームウェアに該当するんだとか。  
+
+他の出典もまとめておく。  
+
+``` txt : e-Words
+ファームウェアとは、コンピューターや電子機器等に内臓されるソフトウェアの一種で、本体内部の回路ゆあ装置等の基本的な制御をつかさどる機能を持ったもの。
+機器内部に固定的に組み込まれ、内部のハードウェアと密接に結びついており、通常の仕様や操作では原則として内容の変更を行わないことから、ハードウェアに性質が近いソフトウェアとして、firm(堅い、固定の)という語が当てられている。
+```
+
+### ファームウェアとデバイスドライバの違い
+
+[わかりそう](https://wa3.i-3-i.info/diff176driver.html)  
+
+・どちらもハードウェアを動かすためのソフトウェア  
+・ファームウェアは部品に内臓されている  
+・デバイスドライバはパソコンの中にインストールされている  
+
+---
 
 ## プラグアンドプレイ(Plug and Play, PnP)
 
@@ -111,42 +134,3 @@ PCに周辺機器や拡張カード等を接続した際にハードウェアと
 ---
 
 ## 雑記
-
-源泉徴収の次は人事考課か。
-忙しいなぁ。
-猶予が1週間なのやめてくれないか。
-人事考課が近いので、各々考えておいてください。
-ファイルは後でお送りしますって感じの段階構えでもいいような気がするけどなぁ。
-
-
-
-いつも疑問に思っていることがある。
-会社のキーボードって付属品の安物であるはずなんだが、とても使いやすいんだよな。
-打鍵感も悪くない。メンブレンのくせしてこの差は何なのだろうか。
-キーボードというより、このデスクと組み合わさった結果に思える。
-会社では肘をデスクにのっけて打ってる。
-これがでかいのかなぁ。
-死んでもパームレストは使いたくないしなぁ。
-肘のっけてる状態がセルフパームレストになってたりしてね。
-
-デスクマットは今でも十分だけど、どうせならもっといいもの使いたいという欲望はある。
-モバイルバッテリーはコードが内蔵されているタイプにしたい。
-
-
-サラブレッドは気性が荒いらしい。
-優秀な人間ばかりを集めた組織が失敗するのは、そういう暴れ馬を1つにまとめてしまうからで、喧嘩が起きてそれにエネルギーを割いてしまうからだとか。
-優秀な人間は性格のいい人間ばかりかと思っていたが、そういうわけでもないのか？
-まぁ、世の中を見ていれば、大企業の不祥事とか色々あるもんな。
-
-
-唇のブツブツが再発した。
-瞼のピクピクも発生した。
-寝てるときに足がピクピクするようになってきた。
-→ストレスがやばい。
-
-・ストレスがやばい(唇のブツブツ、瞼のピクピク)
-
-・クーポン使うために3000円でいったん会計して貰うように交渉できた
-
-AC2AAOP
-そうみ
