朝、ネットワーク進めた

--- a/LPIC/102/11.ネットワークの基礎.md
+++ b/LPIC/102/11.ネットワークの基礎.md
@@ -13,6 +13,43 @@
 ・ウェルノウンポート  
 ・/etc/servicesファイル  
 
+●IPv6
+
+- アドレス長が128bit  
+- ユニキャスト、エニーキャスト、マルチキャストをサポート。  
+ブロードキャストはサポートしていない。  
+ブロードキャストはマルチキャストで行う。  
+- アドレス表記法  
+①各ブロックの先頭の「0」は省略できる  
+②「0」が連続するブロックは省略して[::]と表記できる。(1か所だけ)  
+- プロトコル番号はIPv4と同じ。  
+- ポート機能はIPv4と同じ。  
+- IPv4アドレスと直接通信出来ない。変換が必要。  
+- IPv4のネットワーク部に相当する部分を**プレフィックス**、ホスト部に相当する部分を**インターフェースID**という  
+- プレフィックス、インターフェースIDともに64ビット  
+
+※プロトコル番号  
+上位争のプロトコルを識別するための番号。
+IPヘッダに8ビット情報で存在する。  
+各プロトコルにはポート番号だけではなく、各々に番号がある模様。  
+
+``` txt
+1 : ICPM
+4 : IP
+6 : TCP
+17 : UDP
+etc...
+```
+
+・ユニキャスト : 1つのネットワークインターフェースを識別するアドレス  
+・エニーキャスト : 複数のホストの集合に割り当てられるアドレス  
+・マルチキャスト : IPv4のブロードキャストに相当するもの  
+
+ローカルループバックアドレス , ::1/128  
+グローバルユニキャストアドレス , 2000::/3  
+リンクローカルユニキャストアドレス , fe80::/10  
+マルチキャストアドレス , ff00::/8  
+
 ●CIDR  
 サイダー  
 アドレスクラスの概念を気にしないで、IPアドレスの割り当てや経路選択などの自由度を上げる仕組み  
