--- a/LPIC/102/11.ネットワークの基礎_問題.md
+++ b/LPIC/102/11.ネットワークの基礎_問題.md
@@ -46,4 +46,38 @@ IPv6のアドレスの説明で正しいものはどれか？3つ選択
 ③B:グローバルユニキャストアドレスは一意？
 →正解。だけどグローバルユニキャストはわからなかった。  
 
+接頭にuniが付いたらそれは1つという意味。
+ユニキャストはPC動詞が通信するときに1対1で通信する方式の事。
+
+グローバルユニキャストアドレスはインターネット上で使用するアドレス。
+リンクローカルアドレスは同一リンク上でのみ有効なアドレス。
+ユニークローカルユニキャストアドレス : IPv4のプライベートアドレスに相当する、サイト内で使用するローカルなアドレス。  
+
 ---
+
+## 6 ○
+IPv6の正しいアドレス表示
+
+A : `2001:503:ba3e::2:30`  
+
+---
+
+## 7 ×
+IPv6の説明で正しいもの3つ選択  
+○A
+○B
+×C
+○Dブロードキャストはサポートしない
+
+ブロードキャストはサポートしないそうです。  
+まじか。  
+てか、おれ全然IPv6の事について知らないよなぁ。  
+
+---
+
+## 8 ○
+下記の内容が記述されているファイル名はどれか？
+
+C. /etc/services  
+
+サービスとポート番号が記載されているから。  
