勉強したいこと追加

--- a/勉強したいことリスト.md
+++ b/勉強したいことリスト.md
@@ -122,6 +122,12 @@ ilist list 違い
 プロセスとスレッドの違い
 [イケてるエンジニアになろうシリーズ 〜メモリとプロセスとスレッド編〜](https://moro-archive.hatenablog.com/entry/2014/09/11/013520)
 
+入力した瞬間に即時実行させるやつ。
+結構いろいろやったのでまとめたい。
+MVVMとは？
+うるう年を求めるプログラムをまとめたい。
+EventAggregationとは？
+
 ---
 
 ## 現在進行形
