ネットワーク少し

--- a/LPIC/102/11.ネットワークの基礎_問題.md
+++ b/LPIC/102/11.ネットワークの基礎_問題.md
@@ -81,3 +81,37 @@ IPv6の説明で正しいもの3つ選択
 C. /etc/services  
 
 サービスとポート番号が記載されているから。  
+
+---
+
+## 9 ○
+コネクションレスの、データ信頼性の低いトランスポート層のプロトコルを大文字3文字で記述
+→
+UDP
+
+こんなレベルの問題が出てくれるならどんなにうれしいことか。  
+DiagramかDatagramかど忘れした。
+Dataramです。
+というか、データのやり取りするんだからこうなるよな。  
+
+---
+
+## 10 ×
+ポート番号の値についての説明で正しいもの2つ。  
+
+○A:ポート番号の範囲は0~65535  
+×B:IANAが割り当てたウェルノウンポートはIANAの許可なしに使用することは出来ない  
+○C:非特権ユーザーが使用できるポート番号の最小値は1024  
+
+- 0はIANAが予約している  
+- ウェルノウンポートのサービスとポート番号の登録は定められた手順によってIANAに対して行う必要がある。  
+しかし、ポートの使用において許可を得る必要はない。  
+- 0～1023は特権ユーザーのみアクセスできる  
+システムポートと呼ばれる。  
+- 1024~49151はRegistatredPorts
+有名どころの企業が使ってる。  
+
+---
+
+## 11
+
